--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "parcel": "^2.8.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.21",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.2.7"
   },
   "dependencies": {
     "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.1"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.8.1",
+    "react-simply-carousel": "^8.5.1"
   },
   "repository": {
     "type": "git",
