--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.1",
     "react-simply-carousel": "^8.5.1"
